# Cshellsynth

./: AUTHORS  Doxyfile  Makefile.am  README  TODO  annotated.html  bandpass_8h.html  bandpass_8h_source.html  classes.html  clock_8h.html  clock_8h_source.html  configure.ac  controller_8h.html  controller_8h_source.html  cot_8h.html  cot_8h_source.html  distortion_8h.html  distortion_8h_source.html  dsf_8h.html  dsf_8h_source.html  edho_8h.html  edho_8h_source.html  envelope__generator_8h.html  envelope__generator_8h_source.html  envelope_generator.c  extconf.rb  falling__saw_8h.html  falling__saw_8h_source.html  falling_saw.c  files.html  filter_8h.html  filter_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  (+93 more)
ruby/: Makefile  bandpass.c  clock.c  constant.c  controller.c  controller.h  controllers.c  controllers.h  cotangent.c  cshellsynth.c  depend  distortion.c  dsf.c  edho.c  envelope_generator.c  extconf.rb  falling_saw.c  filter.c  filter.h  filters.c  filters.h  highpass.c  impulse_train.c  infh.c  instrument.c  jackruby.c  jackruby.h  key.c  lin2exp.c  lowpass.c  lowpass.h  mixer.c  mixer.h  modulator.c  noise.c  notch.c  pan.c  parabola.c  portamento.c  rising_saw.c  (+12 more)
ruby/cshellsynth/: extra.rb
search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_78.html  all_7a.html  classes_63.html  classes_6a.html  defines_63.html  enums_63.html  files_62.html  files_63.html  files_64.html  files_65.html  files_66.html  files_68.html  files_69.html  files_6a.html  files_6c.html  files_6d.html  files_6e.html  files_70.html  files_72.html  files_73.html  files_74.html  functions_63.html  functions_6a.html  (+19 more)
src/: Makefile.am  ampeg_vt22.c  atomic-double.h  atomic-float.h  atomic-long.h  atomic-ptr.h  atomic.h  bandpass.c  clock.c  clock.h  controller.c  controller.h  cot.c  cshellsynth.h  distortion.c  dsf.c  edho.c  envelope_generator.c  envelope_generator.h  falling_saw.c  falling_saw.h  filter.c  firwindow.c  firwindow.h  highpass.c  impulse_train.c  infh.c  infh.h  instrument.c  instrument.h  jclient.c  key.c  key.h  lin2exp.c  lowpass.c  mixer.c  mixer.h  modulator.c  modulator.h  noise.c  (+21 more)
src/cshellsynth/: ampeg_vt22.h  atomic-types.h  bandpass.h  clock.h  controller.h  cot.h  distortion.h  dsf.h  edho.h  envelope_generator.h  falling_saw.h  filter.h  highpass.h  impulse_train.h  infh.h  instrument.h  jclient.h  key.h  lin2exp.h  lowpass.h  main.dxg  mixer.h  modulator.h  noise.h  notch.h  pan.h  parabola.h  portamento.h  rising_saw.h  sampler.h  sequencer.h  sine.h  square.h  synth.h  triangle.h  vocalizer.h
