lib_LTLIBRARIES = libcshellsynth.la
libcshellsynth_la_SOURCES = ampeg_vt22.c bandpass.c clock.c controller.c distortion.c envelope_generator.c falling_saw.c filter.c cot.c highpass.c instrument.c jclient.c key.c lin2exp.c lowpass.c mixer.c modulator.c rising_saw.c sequencer.c sine.c square.c synth.c triangle.c
libcshellsynth_la_LDFLAGS = $(JACK_LIBS) $(SNDFILE_LIBS) -module -export-dynamic $(LDFLAGS)
libcshellsynth_la_CFLAGS = $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(CFLAGS)
# libcshellsynth_la_CXXFLAGS = $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(CXXFLAGS)
nobase_include_HEADERS = cshellsynth/bandpass.h cshellsynth/clock.h cshellsynth/controller.h cshellsynth/distortion.h cshellsynth/envelope_generator.h cshellsynth/falling_saw.h cshellsynth/filter.h cshellsynth/cot.h cshellsynth/highpass.h cshellsynth/instrument.h cshellsynth/jclient.h cshellsynth/key.h cshellsynth/lin2exp.h cshellsynth/mixer.h cshellsynth/modulator.h cshellsynth/rising_saw.h cshellsynth/sequencer.h cshellsynth/sine.h cshellsynth/square.h cshellsynth/synth.h cshellsynth/triangle.h cshellsynth.h
check_PROGRAMS = test
test_LDFLAGS = $(JACK_LIBS) $(SNDFILE_LIBS) -lcshellsynth
test_CFLAGS = $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(CFLAGS)
TESTS = test
MAINTAINERCLEANFILES = Makefile.in
